kubernetes/10-ingress/02-ingress-tls-certificado/03-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
spec:
  tls:
  - hosts:
      - appv1.io
    secretName: tls-certificate
  rules:
  - host: appv1.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-v1-svc
            port:
              number: 80
